ExpandableRow: Fix selected row top border not showing when row above was collapsed

--- a/@navikt/core/css/src/table.css
+++ b/@navikt/core/css/src/table.css
@@ -278,6 +278,12 @@
   border-bottom: 1px solid var(--ax-border-neutral-subtleA);
 }
 
+.aksel-table__expandable-row {
+  &:has(+ [data-state="closed"] + .aksel-table__row--selected) * {
+    border-color: var(--ax-border-default);
+  }
+}
+
 .aksel-table__expanded-row {
   &:has(+ .aksel-table__row--selected) {
     & .aksel-table__expanded-row-collapse {
